# Cpp-ci-template

./: .gitmodules  .travis.yml  CMakeLists.txt  Logger.cpp  Logger.h  README.md  appveyor.yml  gtest.cmake  main.cpp
srcs/: Logger.h
tests/: logger_tests.cpp
